Fixed styles on IE9 and positioning of hover menu for showering section.

--- a/bathroom-happiness/sass/pages/_water_therapy.scss
+++ b/bathroom-happiness/sass/pages/_water_therapy.scss
@@ -514,14 +514,21 @@ body.water-therapy{
 			.scrolling-menu-wrap{
 				position: fixed;
 	    	top: 50%;
-	    	left: 0;
-	    	width: 100%;
+	    	left: 50%;
+	    	width: 90px;
 	    	z-index: 10;		   
-	    	@include transition(0.5s all ease-out);
+	    	margin-left: -45px;
+	    	@include transition(0.2s all ease-out);
 		    @include transform(scale(0));
 		     
-		    &.fixed{
+		    &.fixed{		    	
 					@include transform(scale(1));
+		    }
+		    &.active{
+		    	@include transition(0.5s all ease-out);
+		    	width: 320px;
+		    	margin-left: -160px;
+		    	margin-top: -177px;
 		    }
 		    .scrolling-menu-list{
 	    		background: #37d1a4; /* Old browsers */
@@ -709,7 +716,9 @@ body.water-therapy{
 						@include transform(translateY(-50%));
 						padding: 0 60px;
 						@include animation(slide_up_out 1s ease-out forwards);
+						opacity: 0;
 						&.active{
+							opacity: 1;
 							@include animation(slide_up_in 1s ease-out forwards);
 						}
 					}
@@ -744,6 +753,7 @@ body.water-therapy{
 					}
 					//z-index: 1;
 					position: relative;
+					z-index: 1;
 					@include animation(index_update_down 1s ease-out forwards);
 					//@include transition(1s all ease-in-out);
 					.showering-zone-1,
@@ -764,26 +774,34 @@ body.water-therapy{
 						@include transform-style(preserve-3d);
 					}
 					.showering-zone-1{
-						@include animation(slide_out 1s ease-in-out forwards);						
+						opacity: 0;				
+						@include animation(slide_out 1s ease-in-out forwards);
 					}
 					.showering-zone-2{
+						opacity: 0;
 						@include animation(flip_left_out 1s ease-out 0.8s forwards);						
 					}
 					.showering-zone-3{						
+						opacity: 0;
 						@include animation(flip_right_out 1s ease-out 0.5s forwards);						
 					}
 					&.current{
 						//opacity: 1;
+						z-index: 5;
 						@include animation(index_update_up 1s ease-out forwards);
 						.showering-zone-1{
+							opacity: 1;
+							@include transform(translate3d(0,0,0));
 							@include animation(slide_in 1s ease-in-out forwards);
 						}
 						.showering-zone-2
 						{
+							opacity: 1;
 							@include animation(flip_left_in 1s ease-out 0.8s forwards);
 						}
 						.showering-zone-3
 						{
+							opacity: 1;
 							@include animation(flip_right_in 1s ease-out 0.5s forwards);
 						}
 					}
